rssFeed service calling

--- a/rssFeed/Base.lproj/LaunchScreen.storyboard
+++ b/rssFeed/Base.lproj/LaunchScreen.storyboard
@@ -17,8 +17,9 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="rssFeedIcon" translatesAutoresizingMaskIntoConstraints="NO" id="HU4-jm-64r">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="rssFeedIcon" translatesAutoresizingMaskIntoConstraints="NO" id="HU4-jm-64r">
                                 <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                                <color key="backgroundColor" red="0.89411764705882346" green="0.84313725490196079" blue="0.76862745098039209" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
